# internal/entity/role.go
@@ -1,0 +1,14 @@
+package entity
+
+const (
+	RoleAdmin   = "admin"
+	RoleManager = "manager"
+	RoleUser    = "user"
+	RoleGuest   = "guest"
+)
+
+type Role struct {
+	ClientId string `db:"client_id"`
+	UserId   string `db:"user_id"`
+	Role     string `db:"role"`
+}
